# diagz

./: .gitignore  .travis.yml  Main.hs  README.md  diagz.cabal  stack.yaml
src/: Diagz.hs
